syntax = "proto3";

option csharp_namespace = "hw2";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse){
    option (google.api.http) = {
      post: "/v1/product/create_product"
    };
  }
  rpc GetProductList (GetProductListRequest) returns (GetProductListResponse){
    option (google.api.http) = {
      get: "/v1/product/get_list"
    };}
  rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse){
    option (google.api.http) = {
      get: "/v1/product/get_by_id"
    };}
  rpc UpdateProductPrice (UpdateProductPriceRequest) returns (UpdateProductPriceResponse) {
    option (google.api.http) = {
      patch: "/v1/product/update_price"
    };}
}

message CreateProductRequest{
  ProductModel product = 1;
}

message CreateProductResponse{
  bool result = 1;
}

message GetProductListRequest{
  FilterModel filter = 1;
}

message GetProductListResponse{
  repeated  ProductModel products = 1;
}

message GetProductByIdRequest{
  int64 id = 1;
}

message GetProductByIdResponse{
  ProductModel product = 1;
}

message UpdateProductPriceResponse{
  bool result = 1;
}

message UpdateProductPriceRequest{
  int64 id = 1;
  double newPrice = 2;
}


enum TypeProduct {
  COMMON = 0;
  HOUSEHOLD_CHEMICALS = 1;
  APPLIANCES = 2;
  FOOD = 3; 
}

message ProductModel {
  int64 product_id = 1;
  string product_name = 2;
  double product_price = 3;
  double product_weight = 4;
  TypeProduct product_type = 5;
  google.protobuf.Timestamp date_creation = 6;
  int32 warehouse_number = 7;
}

message FilterModel {
  TypeProduct product_type = 1;
  google.protobuf.Timestamp date_creation = 2;
  int32 warehouse_number = 3;
  int32 page_number = 4;
  int32 page_size = 5;
}